# mouse-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml
src/: lib.rs  mouse.rs  sys.rs  types.rs  utils.rs  winmouse.rs
src/sys/: linux.rs  macos.rs  windows.rs
src/types/: keys.rs  win_types.rs
tests/: main.rs
