[package]
name = "mouse-rs"
version = "0.1.4"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://docs.rs/mouse-rs/*/mouse_rs/"
description = "Library to control your mouse via rust"
repository = "https://github.com/DankDumpster/mouse-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.3"

[dependencies.winapi]
version = "0.3.9"
features = ["windef"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]