[package]
name = "mouse-rs"
version = "0.3.1"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://docs.rs/mouse-rs/*/mouse_rs/"
description = "Library to control your mouse via rust"
repository = "https://github.com/DankDumpster/mouse-rs"
keywords = ["mouse", "input", "winapi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies.core-graphics]
version = "0.22.1"
features = ["highsierra"]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.6.3"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = ["windef"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.77"
x11 = "2.18.2"
time = "0.2.21"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]