[package]
name = "mouse-rs"
version = "0.4.2"
authors = ["AltF2 <contact@altf2.dev>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://docs.rs/mouse-rs/*/mouse_rs/"
description = "Library to control your mouse via rust"
repository = "https://github.com/AltF02/mouse-rs"
keywords = ["mouse", "input", "winapi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies.core-graphics]
version = "0.22.3"
features = ["highsierra"]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.7.3"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = ["windef"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.126"
x11-dl = "2.19.1"
time = "0.2.21"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
